--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,15 @@ p {
     line-height: 1.5;
     font-size: 16px;
 }
+
+/* navigation bar */
+
+nav{
+    height: 100px;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
