--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ p {
     font-size: 16px;
 }
 
+li
+{
+    list-style-type: none;
+}
+
 /* navigation bar */
 
 nav{
@@ -26,4 +31,17 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.nav_link_list
+{
+    display: flex;
+}
+
+.nav_link--anchor
+{
+    margin: 0 12px;
+    color: #242424;
+    text-decoration: none;
+    font-weight: 700;
 }
