--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,11 @@ nav{
 {
     background-color: #5d3eff;
 }
+
+.personal_logo
+{
+    font-size: 24px;
+    color: #6030b1;
+    margin: 0 12px;
+    font-weight: bold;
+}
