--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@ h1, h2, h3, h4, h5, h6, span {
     line-height: 1.25;
 }
 
+h1
+{
+    font-size: 36px;
+}
+
 p {
     line-height: 1.5;
     font-size: 16px;
@@ -36,6 +41,11 @@ li
     width: 100%;
     max-width:800px;
     margin: 0 auto;
+}
+
+.text-purple
+{
+   color: #6030b1;
 }
 
 /* navigation bar */
@@ -101,4 +111,36 @@ nav{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.about-me__picture--mask
+{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+    margin-bottom: 28px;
+}
+
+.about-me__picture
+{
+    width: 100%;
+
+    transform: scale(1.5);
+    padding-top: 8px;
+}
+
+.about-me__info--title
+{
+    margin-bottom: 16px;
+}
+
+.about-me__info--para
+{
+    font-size:20px;
+    margin-bottom: 20px;
 }
