--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,10 @@ nav{
     margin-bottom: 20px;
 }
 
+.about-me__link
+{
+ font-size: 20px;
+ color: #242424;
+ text-decoration: none;
+ padding: 0 16px;
+}
