--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,10 @@ li
     flex: 1;
 }
 
+.container
+{
+    padding: 50px 0;
+}
 .row
 {
     width: 100%;
@@ -46,6 +50,16 @@ li
 .text-purple
 {
    color: #6030b1;
+}
+
+.section:nth-child(even)
+{
+    background-color: #f8f8f8;
+}
+
+.section__title 
+{
+    margin-bottom: 20px;
 }
 
 /* navigation bar */
@@ -161,9 +175,25 @@ nav{
 
 .about-me__img--container
 {
-    margin-top: 200px;
+    margin-top: 150px;
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/* TECH - STACK */
+
+.language__img
+{
+    width: 100%;
+    max-width: 100px;
+}
+
+.language__img--wrapper 
+{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
