--- a/styles.css
+++ b/styles.css
@@ -188,12 +188,40 @@ nav{
 {
     width: 100%;
     max-width: 100px;
+    transition: all 300ms ease;
 }
 
-.language__img--wrapper 
+.language 
 {
     width: 25%;
     display: flex;
     justify-content: center;
+}
+
+.language__img:hover
+{
+    filter: brightness(80%);
+    opacity: 0.86;
+    transform: scale(0.9);
+}
+
+.language__img--wrapper 
+{
+    padding: 25px 16px;
+    display: flex;
+    justify-content: center;
     align-items: center;
+}
+
+.language__list
+{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.language__name 
+{
+    position: absolute;
+    bottom: 0;
 }
