--- a/styles.css
+++ b/styles.css
@@ -196,9 +196,10 @@ nav{
     width: 25%;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
-.language__img:hover
+.language:hover .language__img
 {
     filter: brightness(80%);
     opacity: 0.86;
@@ -224,4 +225,11 @@ nav{
 {
     position: absolute;
     bottom: 0;
+    transform: scale(0);
+    transition: all 300ms;
+}
+
+.language:hover .language__name 
+{
+    transform: scale(1);
 }
