--- a/styles.css
+++ b/styles.css
@@ -227,9 +227,11 @@ nav{
     bottom: 0;
     transform: scale(0);
     transition: all 300ms;
+    font-size: 20px;
 }
 
 .language:hover .language__name 
 {
     transform: scale(1);
+    opacity: 1;
 }
