--- a/styles.css
+++ b/styles.css
@@ -235,3 +235,17 @@ nav{
     transform: scale(1);
     opacity: 1;
 }
+
+
+/* Projects */
+
+.project__img
+{
+    width: 100%;
+}
+
+.project__wrapper 
+{
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+    border-radius: 20px;
+}
