--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,28 @@ nav{
 
 .project__wrapper 
 {
+    display: flex;
+    overflow: hidden;
     box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
     border-radius: 20px;
+    position: relative;
+}
+
+.project__wrapper:before
+{
+
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: opacity 450ms ease;
+}
+
+.project:hover .project__wrapper:before 
+{
+    opacity: 0.7;
 }
