hover text and a href for project image

--- a/styles.css
+++ b/styles.css
@@ -242,10 +242,12 @@ nav{
 .project__img
 {
     width: 100%;
+    transition: all 500ms ease;
 }
 
 .project__wrapper 
 {
+   
     display: flex;
     overflow: hidden;
     box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
@@ -256,6 +258,7 @@ nav{
 .project__wrapper:before
 {
 
+    z-index: 2;
     content: "";
     position: absolute;
     top: 0;
@@ -270,4 +273,15 @@ nav{
 .project:hover .project__wrapper:before 
 {
     opacity: 0.7;
+}
+
+.project:hover .project__img
+{
+    transform: scale(1.07);
+    filter: blur(5px);
+}
+
+.project__list 
+{
+    padding-top: 40px;
 }
