--- a/styles.css
+++ b/styles.css
@@ -284,6 +284,7 @@ nav{
 .project:hover .project__description 
 {
     opacity: 1;
+    transform: translateY(-50%);
 }
 
 .project__list 
@@ -296,10 +297,11 @@ nav{
     position: absolute;
     top:50%;
     left: 90px;
-    transform: translateY(-50%);
+    transform: translateY(100%);
     max-width: 550px;
     z-index: 3;
     opacity: 0;
+    transition: transform 450ms,  opacity 300ms;
 }
 
 .project__description--title
