changed arrow up and moved class for arrow

--- a/styles.css
+++ b/styles.css
@@ -382,7 +382,10 @@ footer
 }
 
 .footer__social--link,
-.footer__copyright 
+.footer__copyright,
+.footer__logo--popper
 {
     color: #fff;
 }
+
+
