--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+html 
+{
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6, span {
     color: #242424;
     text-align: center;
@@ -352,10 +357,6 @@ footer
     background-color: #242424;
 }
 
-.footer__logo 
-{
-    
-}
 
 .footer__social--list 
 {
@@ -391,11 +392,23 @@ footer
 
 .footer__logo--popper
 {
+    right: 0;
+    top: 30px;
+    font-weight: 700;
     position: absolute;
+    opacity: 0;
+    transition: all 300ms ease;
 }
 
 .footer__anchor
 {
     margin-bottom: 20px;
     position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper
+{
+
+    opacity: 1;
+    transform: translateX(60px);
 }
