--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,23 @@ p {
 a 
 {
     text-decoration: none;
+    position: relative;
+}
+
+.link_hover-effect:after 
+{
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: black;
+    width: 0;
+    bottom: -3px;
+    left: 0;
+}
+
+.link_hover-effect:hover:after 
+{
+    width: 100%;
 }
 
 li
