--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,14 @@ a
     background-color: black;
     width: 0;
     bottom: -3px;
-    left: 0;
+    right: 0;
+    transition: all 300ms ease;
 }
 
 .link_hover-effect:hover:after 
 {
     width: 100%;
+    left: 0;
 }
 
 li
