--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ li
     width: 100%;
     max-width:800px;
     margin: 0 auto;
+    padding: 0 12px;
 }
 
 .text-purple
@@ -111,6 +112,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 12px;
 }
 
 .nav_link_list
@@ -258,6 +260,7 @@ nav{
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .language__name 
@@ -440,4 +443,40 @@ footer
 
     opacity: 1;
     transform: translateX(60px);
+}
+
+/* Small phones, tablets, large smart phones*/
+
+@media (max-width: 768px) {
+    nav {
+        height: 68px;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    .about-me__info--para {
+        font-size: 18px;
+    }
+
+    .language 
+    {
+        width: calc(100% / 3);
+    }
+
+    .project__description--para
+    {
+        font-size: 14px;
+    }
+
+    .project__description 
+    {
+        left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media (max-width: 480px) {
+    
 }
