--- a/styles.css
+++ b/styles.css
@@ -185,12 +185,28 @@ nav{
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
     margin-bottom: 28px;
+    animation: animate-profile-picture 800ms 200ms backwards;
+}
+
+@keyframes animate-profile-picture
+{
+    0% {
+        transform: scale(0);
+    }
+    80% 
+    {
+        transform: scale(1.1);
+    }
+    100%
+    {
+        transform: scale(1);
+    }
 }
 
 .about-me__picture
 {
     width: 100%;
-
+    animation: fade-in 1200ms 800ms backwards;
     transform: scale(1.5);
     padding-top: 8px;
 }
@@ -198,12 +214,14 @@ nav{
 .about-me__info--title
 {
     margin-bottom: 16px;
+    animation: fade-up 650ms 400ms backwards;
 }
 
 .about-me__info--para
 {
     font-size:20px;
     margin-bottom: 20px;
+    animation: fade-up 650ms 400ms backwards;
 }
 
 .about-me__link
@@ -212,6 +230,25 @@ nav{
  color: #242424;
  text-decoration: none;
  padding: 0 16px;
+ 
+}
+.about-me__links
+{
+    animation: fade-up 650ms 800ms backwards;
+}
+
+@keyframes fade-up
+{
+    0%
+    {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100%
+    {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .about-me__img--container
@@ -221,6 +258,18 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
+    animation: fade-in 1200ms 800ms backwards;
+}
+
+@keyframes fade-in 
+{
+    0%{
+        opacity:0;
+    }
+    100% 
+    {
+        opacity: 1;
+    }
 }
 
 /* TECH - STACK */
@@ -492,6 +541,31 @@ footer
     .about-me__img--container
     {
         display: none;
+    }
+    .project__description 
+    {
+        padding: 0;
+        left:0;
+        width: 100%;
+    }
+
+    .project__description--links
+    {
+        display: flex;
+        justify-content: center;
+    }
+
+    .project__description--title
+    {
+        text-align: center;
+        line-height: 1;
+        font-size: 32px;
+    }
+
+    .project__description--sub-title
+    {
+        text-align:center;
+        margin: 12px 0;
     }
 
 }
