--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,12 @@ a
 {
     text-decoration: none;
     position: relative;
+    transition: opacity 300ms ease;
+}
+
+a:hover 
+{
+    opacity: 0.7;
 }
 
 .link__hover-effect:after 
@@ -269,6 +275,26 @@ nav{
     100% 
     {
         opacity: 1;
+    }
+}
+
+.wave {
+    display: inline-block;
+    animation: animate-wave 500ms infinite ease-in-out;
+}
+
+@keyframes animate-wave
+{
+    0% {
+        transform: rotate(0);
+    }
+    50%
+    {
+        transform: rotate(30deg);
+    }
+    100%
+    {
+        transform: rotate(0);
     }
 }
 
